correctness fix (sessionIds are not supposed to be cached anyway but...)